Initial commit multiple docker networks
